--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Aviation School</title>
 <meta charset="UTF-8" />
-<link rel="stylesheet" type="text/css" href="styles/style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 <!--[if IE 6]><link rel="stylesheet" type="text/css" href="styles/ie6.css" /><![endif]-->
 </head>
 <body>
