--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
       <p>Email: rector@ncat.gov.ng</p>
       <h5>ATE</h5>
       <p>ICT OFFICER</p>
-      <p>Tel: 0903755462</p>
+      <p>Tel: 09037554462</p>
       <p>Fax: 09054977635</p>
       <p>Email: info@ncat.gov.ng</p>
     </div>
@@ -52,7 +52,7 @@
           <li><a href="career.html">Career</a></li>
           <li class="last"><a href="contact-us.html">Contact us</a></li>
         </ul>
-        <p>Copyright &copy; <a href="#">Domain Name</a> - All Rights Reserved | Template By <a target="_blank" href="http://m.instagram.com/i_amdamzy">cute-poision</a></p>
+        <p>Copyright &copy Purple hat; <a href="#">Domain Name</a> - All Rights Reserved | Template By <a target="_blank" href="http://m.instagram.com/i_amdamzy">cute-poision</a></p>
       </div>
     </div>
   </div>
