--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ul>
     <div id="tagline">
       <div>
-        <h4>NIGERIA COLLAGE OF AVIATION TECHNOLOGY</h4>
+        <h4>NIGERIA COLLEGE OF AVIATION TECHNOLOGY</h4>
         <p>THE SKY IS THE BEGINING NOT THE LIMIT,ENDLESS POSSIBLITIES</p>
       </div>
     </div>
